feat: update docs

--- a/docs/config.json
+++ b/docs/config.json
@@ -1,63 +1,99 @@
 {
-  "docs": {
-    "/docs/index.md": {
+  "files": [
+    {
+      "name": "getting-started",
+      "title": "入门指南",
+      "type": "directory",
+      "children": [
+        {
+          "name": "installation.md",
+          "title": "安装说明",
+          "type": "file"
+        },
+        {
+          "name": "quick-start.md",
+          "title": "快速开始",
+          "type": "file"
+        }
+      ]
+    },
+    {
+      "name": "index.md",
       "title": "首页",
-      "order": 1
+      "type": "file"
+    },
+    {
+      "name": "doc2.md",
+      "title": "文档2",
+      "type": "file"
+    },
+    {
+      "name": "product1",
+      "title": "产品说明",
+      "type": "directory",
+      "children": [
+        {
+          "name": "info.md",
+          "title": "产品信息",
+          "type": "file"
+        }
+      ]
+    },
+    {
+      "name": "advanced",
+      "title": "高级功能",
+      "type": "directory",
+      "children": [
+        {
+          "name": "configuration.md",
+          "title": "配置说明",
+          "type": "file"
+        },
+        {
+          "name": "plugins",
+          "title": "插件系统",
+          "type": "directory",
+          "children": [
+            {
+              "name": "overview.md",
+              "title": "插件概览",
+              "type": "file"
+            },
+            {
+              "name": "development.md",
+              "title": "插件开发",
+              "type": "file"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "name": "devdoc",
+      "title": "开发文档",
+      "type": "directory",
+      "children": [
+        {
+          "name": "overview.md",
+          "title": "开发概览",
+          "type": "file"
+        },
+        {
+          "name": "architecture.md",
+          "title": "系统架构",
+          "type": "file"
+        },
+        {
+          "name": "modules.md",
+          "title": "模块说明",
+          "type": "file"
+        }
+      ]
+    },
+    {
+      "name": "aaa.md",
+      "title": "aaa",
+      "type": "file"
     }
-  },
-  "index.md": {
-    "title": "首页",
-    "order": 0
-  },
-  "doc2.md": {
-    "title": "文档2"
-  },
-  "getting-started": {
-    "title": "入门指南",
-    "order": 1
-  },
-  "getting-started/quick-start.md": {
-    "title": "快速入门",
-    "order": 1
-  },
-  "getting-started/installation.md": {
-    "title": "安装说明",
-    "order": 2
-  },
-  "advanced": {
-    "title": "进阶主题",
-    "order": 2
-  },
-  "advanced/configuration.md": {
-    "title": "配置指南",
-    "order": 1
-  },
-  "advanced/plugins": {
-    "title": "插件系统",
-    "order": 2
-  },
-  "advanced/plugins/overview.md": {
-    "title": "插件概览",
-    "order": 1
-  },
-  "advanced/plugins/development.md": {
-    "title": "插件开发",
-    "order": 2
-  },
-  "devdoc": {
-    "title": "开发文档",
-    "order": 100
-  },
-  "devdoc/overview.md": {
-    "title": "项目概述",
-    "order": 1
-  },
-  "devdoc/architecture.md": {
-    "title": "架构设计",
-    "order": 2
-  },
-  "devdoc/modules.md": {
-    "title": "功能模块",
-    "order": 3
-  }
+  ]
 }
